--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "student-feedback",
+  "name": "student-feedback-backend",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.6.1",
-    "cors": "^2.8.5"
+    "express": "^5.1.0",
+    "mongoose": "^8.18.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1"
   }
 }
