--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "feedback-app",
+  "name": "student-feedback-backend",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.4.0",
     "express": "^4.18.2",
-    "mongoose": "^7.5.0"
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.0.0",
+    "helmet": "^7.0.0",
+    "mongoose": "^7.6.3",
+    "morgan": "^1.10.0"
   }
 }
